fix: mobile-menu overflow-y and body fixed

--- a/challenge-25-news-homepage/news-homepage/styles.css
+++ b/challenge-25-news-homepage/news-homepage/styles.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   justify-content: center;
   min-height: 100vh;
+  min-height: 100dvh;
   background-color: var(--color-off-white);
 }
 
@@ -72,7 +73,8 @@ header .menu-mobile {
   top: 0;
   right: 0;
   width: 68%;
-  height: 100vh;
+  height: 100dvh;
+  overflow-y: auto;
   background-color: var(--color-off-white);
   transform: translateX(100%);
   transition: transform 0.3s ease;
@@ -113,6 +115,12 @@ header .menu-mobile li a:hover {
 
 header .menu-desktop {
   display: none;
+}
+
+.menu-open {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 
 article .hero {
